tests/ui/resolve/issue-80079.stderr
error[E0425]: cannot find value `Foo` in this scope
  --> $DIR/issue-80079.rs:11:13
   |
LL |     let _ = Foo;
   |             ^^^ not found in this scope

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.
